--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -1871,7 +1871,7 @@
 					@include is-sp {
 						display: block;
 						text-align: left;
-						margin-bottom: 55px;
+						margin-bottom: -10px;
 						text-align: center;
 					}
 				}
@@ -1879,13 +1879,13 @@
 			&-rows-01 {
 				width: 490px;
 				height: 400px;
-				background: linear-gradient(to left, #59aee7, #4a93d1);
+				// background: linear-gradient(to left, #59aee7, #4a93d1);
 				position: relative;
 				z-index: -2;
 
 				@include is-sp {
 					width: 100%;
-					height: 261px;
+					height: 88vw;
 					margin: 0 auto 20px;
 				}
 
@@ -1944,15 +1944,17 @@
 					left: 50%;
 					transform: translateX(-50%);
 					height: 450px;
-					width: 390px;
+					width: 100%;
 					background: url(../../release/image/page/top-page/sec7_img.png);
 
 					background-position: center;
 
 					@include is-sp {
-						width: 260px;
-						height: 308px;
+						width: 100%;
+						height: 100%;
 						background-size: cover;
+						background-repeat: no-repeat;
+						background-size: contain;
 					}
 				}
 			}
@@ -2051,7 +2053,7 @@
 				width: 115px;
 			}
 			@include is-max(375px) {
-				top: 30%;
+				top: 26%;
 			}
 		}
 
