--- a/src/assets/scss/pages/_realestatepurchase.scss
+++ b/src/assets/scss/pages/_realestatepurchase.scss
@@ -76,7 +76,7 @@
 			width: 100%;
 			top: -95px;
 			height: 100px;
-			background: linear-gradient(to right, #003782, #0059b6);
+			background: linear-gradient(to left, #0059c6, #000017);
 			clip-path: polygon(0 50%, 100% 0, 100% 100%, 0 100%);
 
 			@include is-sp {
@@ -195,7 +195,11 @@
 
 	.sect_2 {
 		position: relative;
-		background: linear-gradient(to right, #2868b1, #3b88ca);
+		background: linear-gradient(
+			90deg,
+			rgba(51, 51, 102, 1) 0%,
+			rgba(0, 89, 182, 1) 100%
+		);
 
 		&__box-big-new {
 			position: absolute;
@@ -231,7 +235,11 @@
 			width: 100%;
 			top: -59px;
 			height: 60px;
-			background: linear-gradient(to right, #2868b1, #3b88ca);
+			background: linear-gradient(
+				90deg,
+				rgba(51, 51, 102, 1) 0%,
+				rgba(0, 89, 182, 1) 100%
+			);
 			-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
 			clip-path: polygon(15% 90%, 100% 0, 100% 100%, 0 100%, 0 0);
 			@include is-sp {
@@ -247,7 +255,11 @@
 			bottom: -58px;
 			height: 60px;
 			z-index: 1;
-			background: linear-gradient(to right, #2868b1, #3b88ca);
+			background: linear-gradient(
+				90deg,
+				rgba(51, 51, 102, 1) 0%,
+				rgba(0, 89, 182, 1) 100%
+			);
 			-webkit-clip-path: polygon(0 0, 100% 1%, 100% 100%, 80% 5%, 0 98%);
 			clip-path: polygon(0 0, 100% 1%, 100% 100%, 80% 5%, 0 98%);
 			@include is-sp {
@@ -763,7 +775,11 @@
 	.sect_5 {
 		position: relative;
 		margin-bottom: 60px;
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(
+			90deg,
+			rgba(51, 51, 102, 1) 0%,
+			rgba(0, 89, 182, 1) 100%
+		);
 		&--clipbg {
 			background-color: #fff;
 		}
