Change: card circle background gradient

--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -861,7 +861,7 @@
 			position: absolute;
 			top: 70px;
 			right: 14px;
-			background: linear-gradient(to right, #2868b1, #3b88ca);
+			background: linear-gradient(to left, #0059c6, #000017);
 			border-radius: 50%;
 			height: 70px;
 			width: 70px;
