Change: background, text color, icon color

--- a/src/assets/scss/pages/_single.scss
+++ b/src/assets/scss/pages/_single.scss
@@ -55,10 +55,10 @@
 
 	.aioseo-breadcrumbs,
 	.aioseo-breadcrumb {
-		color: #0093ee;
+		color: #15377b;
 
 		a {
-			color: #0093ee;
+			color: #15377b;
 		}
 
 		span {
@@ -68,7 +68,6 @@
 			}
 		}
 	}
-
 
 	.single_content {
 		max-width: 750px;
@@ -139,19 +138,19 @@
 			// .col1_txt,
 			// .col2_txt {
 			// 	font-weight: 700;
-			// 	color: #0093ee;
+			// 	color: #15377B;
 			// 	font-family: yu-gothic-pr6n, sans-serif;
 
 			// 	&01 {
 			// 		text-align: center;
-			// 		border-bottom: 2px solid #0093ee;
+			// 		border-bottom: 2px solid #15377B;
 			// 		margin-bottom: 20px;
 			// 		padding-bottom: 10px;
 			// 		padding-top: 100px;
 			// 		@include font-line(22, 40);
 			// 		letter-spacing: 0.01em;
 			// 		font-weight: 700;
-			// 		color: #0093ee;
+			// 		color: #15377B;
 			// 		font-family: yu-gothic-pr6n, sans-serif;
 
 			// 		@include is-sp {
@@ -177,7 +176,7 @@
 			// 		}
 
 			// 		span {
-			// 			color: #0093ee;
+			// 			color: #15377B;
 			// 			font-weight: 700;
 			// 		}
 			// 	}
@@ -187,7 +186,7 @@
 			// 		letter-spacing: 0.07em;
 			// 		padding: 16px 0 0;
 			// 		font-weight: 500;
-			// 		color: #0093ee;
+			// 		color: #15377B;
 			// 		font-family: yu-gothic-pr6n, sans-serif;
 
 			// 		@include is-sp {
@@ -205,7 +204,7 @@
 			// 		padding-left: 6px;
 			// 		margin-top: 35px;
 			// 		margin-bottom: 20px;
-			// 		color: #0093ee;
+			// 		color: #15377B;
 			// 		font-family: yu-gothic-pr6n, sans-serif;
 			// 		font-weight: 700;
 
@@ -227,7 +226,7 @@
 			// 		font-family: yu-gothic-pr6n, sans-serif;
 			// 		font-weight: 700;
 			// 		letter-spacing: 0.23em;
-			// 		color: #0093ee;
+			// 		color: #15377B;
 
 			// 		@include is-sp {
 			// 			font-size: 14.4px;
@@ -238,7 +237,7 @@
 
 			.overlay__box {
 				padding: 30px;
-				border: 2px solid #0093ee;
+				border: 2px solid #15377b;
 				margin-top: 40px;
 				background-color: #e7f4fb;
 
@@ -248,7 +247,7 @@
 				}
 
 				&--heading {
-					color: #0093ee;
+					color: #15377b;
 					font-weight: 500;
 					letter-spacing: 0.12em;
 					@include font-line(14.5, 14.5);
@@ -278,7 +277,7 @@
 				}
 
 				.left {
-					color: #0093ee;
+					color: #15377b;
 					@include font-line(16, 26);
 					font-weight: 400;
 					letter-spacing: 0.09em;
@@ -293,7 +292,7 @@
 				}
 
 				.right {
-					border-left: 2px solid #0093ee;
+					border-left: 2px solid #15377b;
 					padding-left: 15px;
 					@include font-line(13, 13);
 
@@ -305,7 +304,7 @@
 						letter-spacing: 0.15em;
 						font-family: yu-gothic-pr6n, sans-serif;
 						font-weight: 700;
-						color: #0093ee;
+						color: #15377b;
 						line-height: 28.59px;
 						@include is-sp {
 							line-height: 21.5px;
@@ -329,7 +328,7 @@
 						}
 
 						span {
-							color: #0093ee;
+							color: #15377b;
 							margin-right: 6px;
 							@include is-sp {
 								margin-right: 7px;
@@ -341,7 +340,7 @@
 			}
 
 			.bottom_line {
-				border-bottom: 3px solid #0093ee;
+				border-bottom: 3px solid #15377b;
 				@include is-sp {
 					border-bottom: 0;
 				}
@@ -366,9 +365,9 @@
 						font-weight: 400;
 						letter-spacing: 0.09em;
 						font-family: century-gothic, sans-serif;
-						color: #0093ee;
+						color: #15377b;
 						padding-right: 7px;
-						border-right: 2px solid #0093ee;
+						border-right: 2px solid #15377b;
 
 						@include is-sp {
 							font-size: 18px;
@@ -381,7 +380,7 @@
 						font-weight: 700;
 						letter-spacing: 0.15em;
 						font-family: yu-gothic-pr6n, sans-serif;
-						color: #0093ee;
+						color: #15377b;
 						padding-left: 13px;
 
 						@include is-sp {
@@ -404,7 +403,6 @@
 				width: 100%;
 				margin: 0 auto;
 				.post-item {
-					
 					padding: 0 100px;
 					@include is-sp {
 						width: 100%;
@@ -441,14 +439,14 @@
 
 					h1 {
 						text-align: center;
-						border-bottom: 2px solid #0093ee;
+						border-bottom: 2px solid #15377b;
 						margin-bottom: 20px;
 						padding-bottom: 10px;
 						padding-top: 100px;
 						@include font-line(22, 40);
 						letter-spacing: 0.1em;
 						font-weight: 700;
-						color: #0093ee;
+						color: #15377b;
 						font-family: yu-gothic-pr6n, sans-serif;
 
 						@include is-sp {
@@ -467,7 +465,7 @@
 						padding-left: 6px;
 						margin-top: 35px;
 						margin-bottom: 20px;
-						color: #0093ee;
+						color: #15377b;
 						font-family: yu-gothic-pr6n, sans-serif;
 						font-weight: 700;
 
@@ -489,7 +487,7 @@
 						font-family: yu-gothic-pr6n, sans-serif;
 						font-weight: 700;
 						letter-spacing: 0.23em;
-						color: #0093ee;
+						color: #15377b;
 
 						@include is-sp {
 							font-size: 14.4px;
@@ -498,7 +496,7 @@
 					}
 
 					h4 {
-						color: #0093ee;
+						color: #15377b;
 						@include font-line(16, 26);
 						font-weight: 400;
 						letter-spacing: 0.09em;
@@ -513,7 +511,7 @@
 					}
 
 					h5 {
-						color: #0093ee;
+						color: #15377b;
 						font-weight: 500;
 						letter-spacing: 0.12em;
 						@include font-line(14.5, 14.5);
@@ -564,7 +562,7 @@
 						}
 
 						span {
-							color: #0093ee;
+							color: #15377b;
 							font-weight: 700;
 						}
 					}
@@ -574,7 +572,7 @@
 						letter-spacing: 0.07em;
 						padding: 16px 0 35px;
 						font-weight: 500;
-						color: #0093ee;
+						color: #15377b;
 						font-family: yu-gothic-pr6n, sans-serif;
 						text-decoration: underline;
 						display: inline-block;
@@ -617,9 +615,9 @@
 								font-weight: 400;
 								letter-spacing: 0.09em;
 								font-family: century-gothic, sans-serif;
-								color: #0093ee;
+								color: #15377b;
 								padding-right: 7px;
-								border-right: 2px solid #0093ee;
+								border-right: 2px solid #15377b;
 
 								@include is-sp {
 									font-size: 18px;
@@ -636,7 +634,7 @@
 								font-weight: 700;
 								letter-spacing: 0.15em;
 								font-family: yu-gothic-pr6n, sans-serif;
-								color: #0093ee;
+								color: #15377b;
 								padding-left: 13px;
 
 								@include is-sp {
@@ -646,7 +644,7 @@
 								}
 
 								@include is-max(400px) {
-									border-left: 2px solid #0093ee;
+									border-left: 2px solid #15377b;
 									line-height: 1.4;
 								}
 							}
@@ -704,7 +702,8 @@
 						justify-content: space-between;
 					}
 
-					.prev, .next {
+					.prev,
+					.next {
 						width: 68.81px;
 						@include is-sp {
 							width: 100px;
@@ -733,7 +732,7 @@
 				a {
 					display: flex;
 					align-items: center;
-					color: #0093ee;
+					color: #15377b;
 					@include font-line(12, 10);
 					font-family: yu-gothic-pr6n, sans-serif;
 					letter-spacing: 0.1em;
@@ -754,15 +753,15 @@
 				}
 
 				.left_arrow {
-					border-top: 2px solid #0093ee;
-					border-left: 2px solid #0093ee;
+					border-top: 2px solid #15377b;
+					border-left: 2px solid #15377b;
 					transform: rotate(-45deg);
 					margin-right: 5px;
 				}
 
 				.right_arrow {
-					border-top: 2px solid #0093ee;
-					border-right: 2px solid #0093ee;
+					border-top: 2px solid #15377b;
+					border-right: 2px solid #15377b;
 					transform: rotate(45deg);
 					margin-left: 5px;
 				}
@@ -794,7 +793,7 @@
 					font-size: 16px;
 					letter-spacing: 0.3em;
 					font-weight: 700;
-					color: #0093ee;
+					color: #15377b;
 					padding: 23px 0 29px 0;
 					font-family: yu-gothic-pr6n, sans-serif;
 
@@ -818,7 +817,7 @@
 					@include font-line(16);
 					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 700;
-					color: #0093ee;
+					color: #15377b;
 					display: flex;
 					align-items: center;
 					@include is-sp {
@@ -838,7 +837,7 @@
 					}
 					.cat {
 						background-color: #e7f4fb;
-						color: #0093ee;
+						color: #15377b;
 						@include font-line(12);
 						font-family: yu-gothic-pr6n, sans-serif;
 						font-weight: 500;
@@ -846,10 +845,10 @@
 						border-radius: 5px;
 						white-space: pre;
 						transition: 0.3s ease-in-out;
-						border: 1px solid #0093ee;
+						border: 1px solid #15377b;
 						margin-bottom: 9px;
 						display: inline-block;
-						letter-spacing: .12em;
+						letter-spacing: 0.12em;
 						@include is-sp {
 							@include font-line(12.5);
 						}
@@ -857,7 +856,7 @@
 							margin-right: 5px;
 						}
 						&:hover {
-							background-color: #0093ee;
+							background-color: #15377b;
 							color: #fff;
 						}
 						&:not(:last-child) {
@@ -884,7 +883,7 @@
 					@include font-line(16);
 					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 700;
-					color: #0093ee;
+					color: #15377b;
 					display: flex;
 					align-items: center;
 					margin-bottom: 30px;
@@ -908,7 +907,6 @@
 					@include is-sp {
 						flex-direction: column;
 						margin-bottom: 17.5px;
-						
 					}
 
 					.post-item {
@@ -967,12 +965,12 @@
 								font-family: century-gothic, sans-serif;
 								font-weight: 400;
 								color: #808080;
-								border-bottom: 1px solid #0093ee;
+								border-bottom: 1px solid #15377b;
 								padding-bottom: 8px;
 								margin-bottom: 7px;
-								letter-spacing: .11em;
+								letter-spacing: 0.11em;
 								@include is-sp {
-									letter-spacing: .3em;
+									letter-spacing: 0.3em;
 									border-bottom: none;
 									padding-bottom: 0;
 									margin-bottom: 5px;
@@ -983,9 +981,9 @@
 								@include font-line(13, 22);
 								font-family: yu-gothic-pr6n, sans-serif;
 								font-weight: 700;
-								color: #0093ee;
+								color: #15377b;
 								margin-bottom: 5px;
-								letter-spacing: .15em;
+								letter-spacing: 0.15em;
 								@include is-sp {
 									@include font-line(11.5, 18.75);
 									margin-bottom: 0;
@@ -1011,27 +1009,27 @@
 								}
 
 								.cat {
-									background-color: #0093ee;
+									background-color: #15377b;
 									color: #fff;
 									@include font-line(12);
 									font-family: yu-gothic-pr6n, sans-serif;
 									font-weight: 500;
 									padding: 3px 10px 4px;
 									border-radius: 10px;
-									letter-spacing: .24em;
+									letter-spacing: 0.24em;
 									white-space: pre;
 									transition: 0.3s ease-in-out;
-									border: 1px solid #0093ee;
+									border: 1px solid #15377b;
 									@include is-sp {
 										border-radius: 5px;
-										letter-spacing: .19em;
+										letter-spacing: 0.19em;
 									}
 									&-hash {
 										margin-right: 0;
 									}
 									&:hover {
 										background-color: #fff;
-										color: #0093ee;
+										color: #15377b;
 									}
 									&:not(:last-child) {
 										margin-right: 5px;
@@ -1090,14 +1088,14 @@
 									font-family: yu-gothic-pr6n, sans-serif;
 									font-weight: 500;
 									@include font-line(11, 22);
-									color: #0093ee;
+									color: #15377b;
 									padding: 3px 0 0;
 									@include is-sp {
 										@include font-line(11.5, 22);
 									}
 								}
 								.cat {
-									background-color: #0093ee;
+									background-color: #15377b;
 									color: #fff;
 									@include font-line(12);
 									font-family: yu-gothic-pr6n, sans-serif;
@@ -1106,8 +1104,8 @@
 									border-radius: 10px;
 									white-space: pre;
 									transition: 0.3s ease-in-out;
-									border: 1px solid #0093ee;
-									
+									border: 1px solid #15377b;
+
 									@include is-sp {
 										border-radius: 5px;
 									}
@@ -1116,7 +1114,7 @@
 									}
 									&:hover {
 										background-color: #fff;
-										color: #0093ee;
+										color: #15377b;
 									}
 									&:not(:last-child) {
 										margin-right: 5px;
